# emulator

./: .gitignore  CMakeLists.txt  README.md
include/chip8/: chip8.h
src/core/: chip8.cpp
